--- a/project_1_express/package.json
+++ b/project_1_express/package.json
@@ -7,7 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon ./dist/app/server.js"
   },
   "dependencies": {
     "express": "^4.21.2"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
+    "nodemon": "^3.1.9",
     "typescript": "^5.7.2"
   }
 }
